# Medical_Whisper

./: .gitignore  README.md  pyproject.toml  risultati  training_config.yaml
configs/: training_config.yaml
data/: __init__.py  medical_terms.txt
data/augmentation/: __init__.py  cli.py  models.py  pipeline.py
data/augmented_audio/: dataset_augmented.jsonl
data/preprocessed/test/: manifest.json  maxillo01_chunk_0001.npz  (+277 more)
data/synthetic_audio/: manifest_synthetic.json
data/synthetic_chunks/: manifest_text.json
outputs_cloud/checkpoint-3500/: adapter_config.json
outputs_cloud/checkpoint-3600/: rng_state.pth  trainer_state.json
outputs_cloud/checkpoint-3700/: rng_state.pth  trainer_state.json
outputs_cloud_large/adapter_final/: README.md  adapter_config.json
outputs_cloud_large/checkpoint-200/: rng_state.pth  trainer_state.json
outputs_cloud_large/checkpoint-400/: rng_state.pth  trainer_state.json
outputs_cloud_medium/checkpoint-3500/: rng_state.pth  trainer_state.json
outputs_cloud_medium/checkpoint-3600/: README.md
scripts/: 01_chunk_and_align.py  01_prepare_text.py  02_filter_quality.py  02_generate_audio.py  03_data_contracts.py  03_finetune.py  04_metrics.py  05_baseline_benchmark.py  06_preprocess_mlx.py  07_finetune_mlx.py  config_loader.py  metrics.py
scripts_cloud/: dataset.py  deploy_runpod.sh  finetune_pytorch.py  metrics.py  requirements.txt  training_config.yaml
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-05-13-data-augmentation/: plan.md  requirements.md  validation.md
specs/2026-05-13-synthetic-audio-dataset/: plan.md  requirements.md  validation.md
specs/2026-05-14-finetuning-evaluation/: plan.md  requirements.md  validation.md
specs/2026-05-17-pytorch-cloud-finetuning/: plan.md  requirements.md  validation.md
tests/: test_augmentation.py  test_baseline_benchmark.py  test_data_contracts.py  test_finetune_mlx.py  test_metrics.py  test_preprocess_mlx.py
(+2493 files in other folders)
