[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "whisperx>=3.7.2",
]
