[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiomentations>=0.43.1",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "mlx>=0.31.2",
    "mlx-whisper>=0.4.3",
    "nltk>=3.9.4",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.5",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.67.3",
    "transformers<4.41.0",
    "tts>=0.21.0",
    "typer>=0.25.1",
    "wandb>=0.27.0",
]
